# fraud-detection

./: .gitignore  pyproject.toml
app/: config.py  logger.py  main.py
app/controllers/: prediction_controller.py
app/notebook/: ccd.ipynb
app/routes/: prediction_routes.py
app/schemas/: prediction_schema.py
app/services/: prediction_service.py
frontend/: api_client.py  main.py
